<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Target">

    <TextView
        android:id="@+id/textTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/AppNema"
        android:textColor="@color/main"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ProgressBar
        android:id="@+id/pb_target"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:progressDrawable="@drawable/progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTarget" />

    <ImageView
        android:id="@+id/iv_arrow_target"
        android:layout_width="42dp"
        android:layout_height="26dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/pb_target"
        app:layout_constraintStart_toStartOf="@+id/pb_target"
        app:srcCompat="@drawable/arrow_10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/inter"
        android:text="@string/YourTarget"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pb_target"
        app:layout_constraintTop_toBottomOf="@+id/pb_target" />

    <Button
        android:id="@+id/btn_lose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Looseweight"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/pb_target"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:strokeColor="@color/main"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_buff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/GetBuff"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btn_lose"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btn_lose"
        app:strokeColor="@color/main"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_keep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/KeepFit"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btn_buff"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btn_buff"
        app:strokeColor="@color/main"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>